Bug 143059 - printing of mails ignores if part of the mail is blinded out
Summary: printing of mails ignores if part of the mail is blinded out
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.8
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-16 15:19 UTC by Peter Paulsen
Modified: 2011-11-09 08:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Paulsen 2007-03-16 15:19:56 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Debian testing/unstable Packages
OS:                Linux

When I view mails I have the possibility to blind out parts of the mail by clicking on those little plus/minus signs and shorten the mail to its relevant parts. But when I print the shortened mail everything is printed, not only the non-blinded out parts and a lot of non-relevant text produces not wanted printed pages and wastes ink and paper. I'd expect that the mails get printed the way they look like on the screen i.e. without blinded out text parts but with a sign that something is blinded out at certain places. As a sign I would expect the plus/minus tree to be printed too (but only if parts are hidden).
Comment 1 Thomas McGuire 2007-03-16 16:16:00 UTC
Confirmed.
Comment 2 Martin Koller 2009-08-05 13:10:14 UTC
Still true with KDE 4.3
Comment 3 Laurent Montel 2011-09-09 11:56:59 UTC
It's right it's still valid in kmail2
Will look at how to fix it.
Comment 4 Laurent Montel 2011-11-09 08:09:36 UTC
Git commit f293c6cba1831a29bd067d7cf000830609bad01d by Montel Laurent.
Committed on 09/11/2011 at 09:08.
Pushed by mlaurent into branch 'master'.

Fix Bug 143059 - printing of mails ignores if part of the mail is blinded out

not necessary to recreate readerwin/reload email. Print was you see.

BUG: 143059
FIXED-IN: 4.7.4

M  +19   -20   kmail/messageactions.cpp

http://commits.kde.org/kdepim/f293c6cba1831a29bd067d7cf000830609bad01d
Comment 5 Laurent Montel 2011-11-09 08:11:15 UTC
Git commit d71fe142167004860b19c97807cc223b357f4300 by Montel Laurent.
Committed on 09/11/2011 at 09:08.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 143059 - printing of mails ignores if part of the mail is blinded out

not necessary to recreate readerwin/reload email. Print was you see.

BUG: 143059
FIXED-IN: 4.7.4
(cherry picked from commit f293c6cba1831a29bd067d7cf000830609bad01d)

Conflicts:

	kmail/messageactions.cpp

M  +19   -21   kmail/messageactions.cpp

http://commits.kde.org/kdepim/d71fe142167004860b19c97807cc223b357f4300