Fix Bug 143059 - printing of mails ignores if part of the mail is blinded out

not necessary to recreate readerwin/reload email. Print was you see.

BUG: 143059
FIXED-IN: 4.7.4